# escrow-ondrix

./: .gitignore  README.md  requirements_check.txt
.github/workflows/: dependency-lock-check.yml  evm-scan.yml  solana-scan.yml
escrow-frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
escrow-frontend/src/: App.tsx  index.css  vite-env.d.ts
escrow-frontend/src/components/: ChainSelector.tsx  GlobalLockStatus.tsx  Header.tsx  InvestmentDashboard.tsx  LandingPage.tsx  LoadingSkeleton.tsx  NetworkIcons.tsx  NetworkSwitchModal.tsx  WalletConnection.tsx
escrow-frontend/src/config/: contracts.ts
escrow-frontend/src/contexts/: WalletContext.tsx
escrow-frontend/src/hooks/: useBnbContractConfig.ts  useSolanaContractConfig.ts  useSolanaInvestment.ts
escrow-frontend/src/types/: index.ts
escrow-frontend/src/utils/: logger.ts  solana.ts
ondrix-escrow-evm/: .env.example  SECURITY_AUDIT_REPORT.md  hardhat.config.ts  package.json
ondrix-escrow-evm/contracts/: OndrixEscrow.sol
ondrix-escrow-evm/contracts/mocks/: MockERC20.sol
ondrix-escrow-evm/scripts/: init-only.ts  simple-deploy.ts
ondrix-escrow-solana/: Cargo.toml  README.md  SECURITY_AUDIT_REPORT.md  initialize-escrow.js  tsconfig.json
ondrix-escrow-solana/.cargo/: audit.toml
ondrix-escrow-solana/src/: lib.rs  lib.rs.backup
ondrix-escrow-solana/tests/: README.md
ondrix-escrow-solana/tests/v4-current/: extended-security-tests.js  full-cycle-test.js  test-unsold-reclaim.js
